--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.0",
     "babel-loader": "^8.2.3",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
