--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
+    "test:dev": "npm test -- --watch",
     "start": "node server.js",
     "start:dev": "nodemon server --ignore src/ --ignore dist/ & npm run build:dev",
     "build": "webpack",
@@ -34,6 +35,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.0",
     "babel-loader": "^8.2.3",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
